--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "ejs": "^2.5.2"
   },
   "engines": {
     "node": "9.8.0"
