--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.3",
-    "ejs": "^2.5.2"
+    "ejs": "^2.5.2",
+    "express": "^4.16.3"
+    
   },
   "engines": {
     "node": "9.8.0"
   }
 }
+
+
+
